added css to style the html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="./style.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,7 +9,10 @@
 </head>
 <html>
     <body>
-        <h1>RESUME</h1>
+        <h1>MY RESUME</h1>
+        <div>
+            <img src="images/john.jpg"/>
+        </div>
         <h2>Contents</h2>
         <ol>
             <li><a href="#Personal-Details">Personal Details</a></li>
@@ -77,6 +81,7 @@
                 <li>Boswell Gathu 0720409881</li>
                 <li>David Irugu 0725341681</li>
             </ul>
+            <p id="quote"><em>"Don't live to make your presence noticed, live to make your absence felt".</em></p>
         </div>
     </body>
 </html>
